feat: Revamp UI with a new modern design system, add guesthouse functionality, and update database schema.

--- a/admin-tools.html
+++ b/admin-tools.html
@@ -6,6 +6,7 @@
     <title>Strumenti Admin – B&Brother’s</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" type="image/png" href="assets/images/logo-bbrothers.png" />
 </head>
 
 <body>
