--- a/area-proprietari-modifica.html
+++ b/area-proprietari-modifica.html
@@ -6,6 +6,7 @@
   <title>Modifica proprietà – B&Brother’s</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="icon" type="image/png" href="assets/images/logo-bbrothers.png" />
 </head>
 
 <body>
@@ -61,6 +62,18 @@
           <a href="area-proprietari.html" class="btn btn-outline">← Torna alle strutture</a>
         </div>
 
+        <!-- Room Section (Only for Guest House) -->
+        <div id="rooms-section"
+          style="display: none; margin-bottom: 2rem; padding: 1.5rem; background: var(--bg-secondary); border-radius: var(--radius-md);">
+          <div class="section-header" style="margin-bottom: 1rem;">
+            <h3 style="margin:0;">Stanze della Guest House</h3>
+            <a id="btn-add-room" href="#" class="btn btn-primary btn-small">+ Aggiungi Stanza</a>
+          </div>
+          <div id="rooms-list" class="cards-grid" style="grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));">
+            <!-- Rooms loaded here -->
+          </div>
+        </div>
+
         <div id="edit-photos" class="gallery-viewer" style="margin: 12px 0;"></div>
 
         <form id="edit-property-form" class="contact-form">
@@ -91,6 +104,14 @@
             </label>
           </div>
           <label>
+            Link di prenotazione (Opzionale)
+            <input type="url" id="edit-booking-link" placeholder="https://..." />
+          </label>
+          <label>
+            Tipo struttura
+            <input type="text" id="edit-type" disabled />
+          </label>
+          <label>
             Stato annuncio
             <select id="edit-status">
               <option value="draft">Bozza</option>
@@ -116,6 +137,7 @@
     </div>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
     const SUPABASE_URL = "https://qmsgcpkxdkijsxyvhuog.supabase.co";
@@ -159,6 +181,39 @@
     let currentUser = null;
     let currentProperty = null;
 
+    async function loadRooms(parentId) {
+      const roomsList = document.getElementById("rooms-list");
+      roomsList.innerHTML = "Caricamento stanze...";
+
+      const { data, error } = await supabaseClient
+        .from("properties")
+        .select("*")
+        .eq("parent_id", parentId)
+        .order("title");
+
+      if (error) {
+        roomsList.innerHTML = "Errore caricamento stanze: " + error.message;
+        return;
+      }
+
+      if (!data || data.length === 0) {
+        roomsList.innerHTML = "<p>Nessuna stanza creata.</p>";
+        return;
+      }
+
+      roomsList.innerHTML = data.map(room => `
+        <div class="listing-card" style="padding: 1rem;">
+            <h4 style="margin: 0 0 0.5rem 0;">${room.title}</h4>
+            <div style="font-size: 0.9rem; color: var(--text-muted); margin-bottom: 0.5rem;">
+                ${room.guests ? room.guests + " ospiti" : ""} • ${room.status}
+            </div>
+            <a href="area-proprietari-modifica.html?id=${room.id}" class="btn btn-outline btn-small">Modifica</a>
+        </div>
+      `).join("");
+    }
+
+    let sortableInstance = null;
+
     function renderOwnerGallery(photos, property) {
       const gallery = document.getElementById("edit-photos");
       if (!photos || photos.length === 0) {
@@ -166,61 +221,41 @@
         return;
       }
 
-      const first = photos.find((p) => p.isCover) || photos[0];
-      gallery.innerHTML = `
-      <div class="gallery-main">
-        <img id="owner-main-photo" src="${first.url}" alt="${first.label}" loading="lazy" />
-        <div class="gallery-caption">${first.label}</div>
-      </div>
-      <div class="gallery-thumbs" id="owner-thumbs">
-        ${photos
-          .map(
-            (p, idx) => `
-              <div class="gallery-thumb ${p.isCover ? "thumb-active" : ""}" data-full="${p.url}">
-                <img src="${p.url}" alt="${p.label}" loading="lazy" />
-                <div class="thumb-actions">
-                  ${p.isCover
-                ? '<span class="small-label">Copertina</span>'
-                : p.id === "cover"
-                  ? ""
-                  : `<button class=\"btn btn-outline btn-small\" data-set-cover=\"${p.id}\" data-cover-url=\"${p.url}\">Imposta copertina</button>`
-              }
-                  ${p.id !== "cover"
-                ? `<button class=\"btn btn-outline btn-small\" data-photo-id=\"${p.id}\" data-photo-path=\"${p.path}\">Elimina</button>`
-                : ""
-              }
-                </div>
-              </div>
-            `
-          )
-          .join("")}
-      </div>
-    `;
+      // Create Grid Container
+      gallery.innerHTML = `<div id="gallery-grid" class="gallery-sortable-grid"></div>`;
+      const grid = document.getElementById("gallery-grid");
 
-      const main = document.getElementById("owner-main-photo");
-      const thumbs = document.querySelectorAll("#owner-thumbs .gallery-thumb");
-      thumbs.forEach((thumb) => {
-        thumb.addEventListener("click", () => {
-          main.src = thumb.dataset.full;
-          thumbs.forEach((t) => t.classList.remove("thumb-active"));
-          thumb.classList.add("thumb-active");
-        });
-      });
+      // Populate Grid
+      grid.innerHTML = photos.map(p => `
+        <div class="gallery-item" data-id="${p.id}" data-path="${p.path}">
+          <img src="${p.url}" alt="Foto" loading="lazy">
+          ${p.isCover ? '<span class="gallery-item-badge">Copertina</span>' : ''}
+          <div class="gallery-item-actions">
+            ${!p.isCover ? `
+              <button type="button" class="btn btn-outline btn-small" style="width:100%; font-size:11px;" onclick="setCoverPhoto('${p.id}', '${p.url}', currentProperty)">Usa come copertina</button>
+              <button type="button" class="btn btn-outline btn-small" style="width:100%; font-size:11px; color:#e11d48; border-color:#e11d48;" onclick="deletePhoto('${p.id}', '${p.path}')">Elimina</button>
+            ` : `
+               <button type="button" class="btn btn-outline btn-small" style="width:100%; font-size:11px; color:#e11d48; border-color:#e11d48;" onclick="deletePhoto('${p.id}', '${p.path}')">Elimina</button>
+            `}
+          </div>
+        </div>
+      `).join("");
 
-      gallery.querySelectorAll("[data-set-cover]").forEach((btn) => {
-        btn.addEventListener("click", (e) => {
-          e.stopPropagation();
-          setCoverPhoto(btn.dataset.setCover, btn.dataset.coverUrl, property);
-        });
-      });
-
-      gallery.querySelectorAll("[data-photo-id]").forEach((btn) => {
-        btn.addEventListener("click", (e) => {
-          e.stopPropagation();
-          deletePhoto(btn.dataset.photoId, btn.dataset.photoPath);
-        });
+      // Initialize Sortable
+      if (sortableInstance) sortableInstance.destroy();
+      sortableInstance = new Sortable(grid, {
+        animation: 150,
+        ghostClass: 'sortable-ghost',
+        onEnd: function (evt) {
+          // Drag ended, order updated in DOM
+        }
       });
     }
+
+    // Expose functions globally for inline onclick
+    window.setCoverPhoto = setCoverPhoto;
+    window.deletePhoto = deletePhoto;
+    // Note: currentProperty is global in this script scope
 
     async function loadExistingPhotos(property) {
       const gallery = document.getElementById("edit-photos");
@@ -239,32 +274,18 @@
       }
 
       const photos = (data || []).map((item) => {
-        const labelName = item.path?.split("/").pop() || "Foto";
         return {
           id: item.id,
           url: publicUrlFromPath(item.path),
-          name: labelName,
-          label: item.is_cover ? "Foto di copertina" : labelName,
           isCover: item.is_cover,
           path: item.path,
         };
       });
 
-      if (photos.length === 0 && property.cover_photo_url) {
-        photos.push({
-          id: "cover",
-          url: property.cover_photo_url,
-          name: "cover",
-          label: "Foto di copertina",
-          isCover: true,
-          path: getStoragePathFromUrl(property.cover_photo_url),
-        });
-      }
-
-      if (photos.length > 0) {
-        const coverPhoto = photos.find((p) => p.isCover) || photos[0];
-        property.cover_photo_url = coverPhoto.url;
-      }
+      // We no longer manually push the 'cover' from property blob if photos exist in DB, 
+      // relying on DB photos as source of truth. 
+      // But if DB is empty and property has a cover url from old system, we might miss it.
+      // However, for editing we prefer the `property_photos` table.
 
       renderOwnerGallery(photos, property);
     }
@@ -301,6 +322,8 @@
     }
 
     async function deletePhoto(photoId, photoPath) {
+      if (!confirm("Sei sicuro di voler eliminare questa foto?")) return;
+
       const toDeletePath = photoPath?.startsWith("http") ? getStoragePathFromUrl(photoPath) : photoPath;
 
       if (toDeletePath) {
@@ -318,7 +341,31 @@
         }
       }
 
+      // If it was cover, we might want to warn or unset property cover? 
+      // For now, reload handles display.
       loadExistingPhotos(currentProperty);
+    }
+
+    async function savePhotoOrder() {
+      if (!sortableInstance) return;
+      const order = sortableInstance.toArray(); // Array of data-id
+      if (!order || order.length === 0) return;
+
+      const updates = order.map((id, index) => ({
+        id: id,
+        sort_order: index,
+        // we need to include property_id to update? No, ID is primary key.
+      }));
+
+      // Supabase upsert/update by ID
+      // We can do Promise.all or a single upsert if API supports it for customized columns
+      // Standard supabase-js update expects a filter.
+      // We will loop for now, or use upsert if we had all fields. 
+      // Efficient way: create a stored procedure or just loop. Loop is fine for < 50 photos.
+
+      for (let i = 0; i < order.length; i++) {
+        await supabaseClient.from("property_photos").update({ sort_order: i }).eq("id", order[i]);
+      }
     }
 
     async function loadProperty() {
@@ -348,7 +395,21 @@
       document.getElementById("edit-full").value = data.full_description || "";
       document.getElementById("edit-guests").value = data.guests || "";
       document.getElementById("edit-price").value = data.base_price || "";
+      document.getElementById("edit-booking-link").value = data.booking_link || "";
+      document.getElementById("edit-type").value = data.property_type === "guest_house" ? "Guest House" :
+        data.property_type === "room" ? "Stanza" : "Appartamento";
       document.getElementById("edit-status").value = data.status || "draft";
+
+      // If Guest House, show rooms section and hide guests input
+      if (data.property_type === "guest_house") {
+        document.getElementById("rooms-section").style.display = "block";
+        document.getElementById("btn-add-room").href = `area-proprietari-nuova.html?parent_id=${data.id}`;
+        document.getElementById("edit-guests").closest("label").style.display = "none";
+        loadRooms(data.id);
+      } else {
+        document.getElementById("rooms-section").style.display = "none";
+        document.getElementById("edit-guests").closest("label").style.display = "block";
+      }
 
       loadExistingPhotos(data);
     }
@@ -359,12 +420,14 @@
       const msg = document.getElementById("edit-message");
       msg.textContent = "Aggiornamento in corso...";
 
+      // 1. Save Text Fields
       const title = document.getElementById("edit-title").value;
       const zone = document.getElementById("edit-zone").value;
       const shortDesc = document.getElementById("edit-short").value;
       const fullDesc = document.getElementById("edit-full").value;
       const guests = parseInt(document.getElementById("edit-guests").value || "0", 10);
       const price = parseFloat(document.getElementById("edit-price").value || "0");
+      const bookingLink = document.getElementById("edit-booking-link").value;
       const status = document.getElementById("edit-status").value;
       const newPhotos = Array.from(document.getElementById("edit-photos-input").files || []);
 
@@ -373,6 +436,7 @@
         .update({
           title,
           zone,
+          booking_link: bookingLink,
           short_description: shortDesc,
           full_description: fullDesc,
           guests,
@@ -386,6 +450,12 @@
         return;
       }
 
+      // 2. Save Photo Order
+      if (sortableInstance) {
+        await savePhotoOrder();
+      }
+
+      // 3. Upload New Photos
       if (newPhotos.length > 0) {
         let coverUrl = null;
         const failedUploads = [];
@@ -395,7 +465,9 @@
           .eq("property_id", currentProperty.id);
         const offset = count || 0;
 
-        await supabaseClient.from("property_photos").update({ is_cover: false }).eq("property_id", currentProperty.id);
+        // Note: we don't reset is_cover here unless the user explicitly chose one? 
+        // Or if it's the very first photo ever.
+        // Let's keep logic simple: push new photos to end.
 
         for (let i = 0; i < newPhotos.length; i++) {
           const file = newPhotos[i];
@@ -412,7 +484,7 @@
           const { error: insertError } = await supabaseClient.from("property_photos").insert({
             property_id: currentProperty.id,
             path,
-            is_cover: i === 0,
+            is_cover: (offset === 0 && i === 0), // If no photos existed, first one is cover
             sort_order: offset + i,
           });
 
@@ -421,7 +493,7 @@
             continue;
           }
 
-          if (i === 0) {
+          if (offset === 0 && i === 0) {
             coverUrl = publicUrlFromPath(path);
           }
         }
@@ -433,13 +505,13 @@
 
         if (failedUploads.length > 0) {
           msg.textContent =
-            "Modifica salvata ma alcune foto non sono state caricate (controlla i permessi del bucket property-photos su Supabase): " +
+            "Modifica salvata ma alcune foto non sono state caricate: " +
             failedUploads.join("; ");
         }
       }
 
       if (!msg.textContent || msg.textContent === "Aggiornamento in corso...") {
-        msg.textContent = "Annuncio aggiornato.";
+        msg.textContent = "Annuncio aggiornato con successo!";
       }
 
       document.getElementById("edit-photos-input").value = "";
