--- a/servizio-dettaglio.html
+++ b/servizio-dettaglio.html
@@ -165,8 +165,8 @@
                     if (d.rate_type === 'A Persona') priceSuffix = '<span style="font-size:12px; font-weight:400; color:#6b7280;"> / pers</span>';
                     if (d.rate_type === 'Complessivo') priceSuffix = '<span style="font-size:12px; font-weight:400; color:#6b7280;"> (Tot)</span>';
                     if (d.rate_type === 'Tratta Fissa') priceSuffix = '';
-                    if (d.rate_type === 'Oraria') priceSuffix = '<span style="font-size:12px; font-weight:400; color:#6b7280;"> / ora</span>';
-                    if (d.rate_type === 'Giornaliera') priceSuffix = '<span style="font-size:12px; font-weight:400; color:#6b7280;"> / giorno</span>';
+                    if (d.rate_type === 'Oraria') priceSuffix = '<span style="font-size:12px; font-weight:400; color:#6b7280;"> / h</span>';
+                    if (d.rate_type === 'Giornaliera') priceSuffix = '<span style="font-size:12px; font-weight:400; color:#6b7280;"> / g</span>';
                     if (d.rate_type === 'Personalizzata') priceSuffix = '';
 
                     // META DETAILS
