--- a/404.html
+++ b/404.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
   <meta charset="UTF-8" />
   <title>Pagina non trovata – B&Brother’s</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="icon" type="image/png" href="assets/images/logo-bbrothers.png" />
 </head>
+
 <body>
-<header class="site-header">
-  <div class="container header-inner fade-in">
-    <a href="index.html" class="logo">
-      <img src="assets/images/logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
-      <div class="logo-text">
-        <span class="logo-title">B&Brother’s</span>
-        <span class="logo-subtitle">Gestione affitti brevi a Roma</span>
-      </div>
-    </a>
-    <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Apri il menu" />
-    <label for="nav-toggle" class="menu-toggle">
-      <span class="menu-toggle-box">
-        <span class="menu-toggle-line"></span>
-        <span class="menu-toggle-line"></span>
-        <span class="menu-toggle-line"></span>
-      </span>
-      <span class="menu-toggle-text">Menu</span>
-    </label>
-    <nav class="main-nav">
-      <a href="index.html" class="nav-link">Home</a>
+  <header class="site-header">
+    <div class="container header-inner fade-in">
+      <a href="index.html" class="logo">
+        <img src="assets/images/logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
+        <div class="logo-text">
+          <span class="logo-title">B&Brother’s</span>
+          <span class="logo-subtitle">Gestione affitti brevi a Roma</span>
+        </div>
+      </a>
+      <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Apri il menu" />
+      <label for="nav-toggle" class="menu-toggle">
+        <span class="menu-toggle-box">
+          <span class="menu-toggle-line"></span>
+          <span class="menu-toggle-line"></span>
+          <span class="menu-toggle-line"></span>
+        </span>
+        <span class="menu-toggle-text">Menu</span>
+      </label>
+      <nav class="main-nav">
+        <a href="index.html" class="nav-link">Home</a>
         <a href="proprietari.html" class="nav-link">Per i proprietari</a>
         <a href="ospiti.html" class="nav-link">Per gli ospiti</a>
         <a href="alloggi.html" class="nav-link">Alloggi</a>
@@ -35,34 +38,35 @@
         <a href="faq.html" class="nav-link">FAQ</a>
         <a href="contatti.html" class="nav-link">Contatti</a>
         <a href="login.html" class="nav-link">Area proprietari</a>
-        
-    </nav>
-    <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
-  </div>
-</header>
 
-<main>
+      </nav>
+      <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
+    </div>
+  </header>
 
-<section class="page-hero">
-  <div class="container fade-in">
-    <p class="eyebrow">Errore 404</p>
-    <h1>Pagina non trovata.</h1>
-    <p class="page-hero-subtitle">
-      La pagina che cerchi non esiste più o non è mai esistita. 
-      Torna alla home o contattaci se hai bisogno di aiuto.
-    </p>
-    <a href="index.html" class="btn btn-primary">Torna alla home</a>
-  </div>
-</section>
+  <main>
 
-</main>
+    <section class="page-hero">
+      <div class="container fade-in">
+        <p class="eyebrow">Errore 404</p>
+        <h1>Pagina non trovata.</h1>
+        <p class="page-hero-subtitle">
+          La pagina che cerchi non esiste più o non è mai esistita.
+          Torna alla home o contattaci se hai bisogno di aiuto.
+        </p>
+        <a href="index.html" class="btn btn-primary">Torna alla home</a>
+      </div>
+    </section>
 
-<footer class="site-footer">
-  <div class="container footer-inner">
-    <p>© 2025 B&Brother’s – Gestione Affitti Brevi a Roma. Tutti i diritti riservati.</p>
-    <p>WhatsApp: +39 334 507 1226 · Email: a.paolino0104@gmail.com</p>
-  </div>
-</footer>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>© 2025 B&Brother’s – Gestione Affitti Brevi a Roma. Tutti i diritti riservati.</p>
+      <p>WhatsApp: +39 334 507 1226 · Email: a.paolino0104@gmail.com</p>
+    </div>
+  </footer>
 
 </body>
+
 </html>
