--- a/area-proprietari-modifica.html
+++ b/area-proprietari-modifica.html
@@ -108,6 +108,10 @@
             <input type="url" id="edit-booking-link" placeholder="https://..." />
           </label>
           <label>
+            Numero di Telefono/WhatsApp (Opzionale)
+            <input type="text" id="edit-phone" placeholder="+39 333 1234567" />
+          </label>
+          <label>
             Tipo struttura
             <input type="text" id="edit-type" disabled />
           </label>
@@ -396,6 +400,7 @@
       document.getElementById("edit-guests").value = data.guests || "";
       document.getElementById("edit-price").value = data.base_price || "";
       document.getElementById("edit-booking-link").value = data.booking_link || "";
+      document.getElementById("edit-phone").value = data.phone_number || "";
       document.getElementById("edit-type").value = data.property_type === "guest_house" ? "Guest House" :
         data.property_type === "room" ? "Stanza" : "Appartamento";
       document.getElementById("edit-status").value = data.status || "draft";
@@ -428,6 +433,7 @@
       const guests = parseInt(document.getElementById("edit-guests").value || "0", 10);
       const price = parseFloat(document.getElementById("edit-price").value || "0");
       const bookingLink = document.getElementById("edit-booking-link").value;
+      const phoneNumber = document.getElementById("edit-phone").value;
       const status = document.getElementById("edit-status").value;
       const newPhotos = Array.from(document.getElementById("edit-photos-input").files || []);
 
@@ -437,6 +443,7 @@
           title,
           zone,
           booking_link: bookingLink,
+          phone_number: phoneNumber,
           short_description: shortDesc,
           full_description: fullDesc,
           guests,
